resolve stylesheet overlaps

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,7 +37,9 @@
 /*    padding: 60px 20px 20px 55px;*/
 }
 
-.field {
+.field, .submit {
+    padding-left: 1cm;
+    padding-bottom: 5mm;
     color: #000000;
     text-decoration: none;
     font-family: 'Open Sans Condensed', sans-serif;
@@ -71,8 +73,10 @@
 h2, h2 a, h2 a:visited, h2 a:active {
     font-size: 20pt;
     text-decoration: none;
-    font-family: 'Open Sans Condensed', sans-serif;color: #000000;
+    font-family: 'Open Sans Condensed', sans-serif;
     color: #000000;
+    padding-left: 3mm;
+    font-weight: 500;
 }
 
 .login {
