--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -28,12 +28,6 @@
     font-size: 40pt;
 }
 
-.field, .submit {
-  padding-left: 1cm;
-  padding-bottom: 5mm;
-  font-family: 'Open Sans Condensed', sans-serif;
-}
-
 .book-info ul {
   font-family: 'Open Sans Condensed', sans-serif;
   padding-left: 2cm;
