--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,12 +9,6 @@ h1 {
   font-weight: 700;
 }
 
-h2 {
-  font-family: 'Open Sans Condensed', sans-serif;
-  padding-left: 3mm;
-  font-weight: 500;
-}
-
 .book-list {
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 13pt;
